may have solved graphics probelm using fake grid divs to gap over the images while still scaling

--- a/style.css
+++ b/style.css
@@ -169,6 +169,9 @@ p {
     background-repeat: no-repeat;
     width: 100%;
     height: 54.8vw;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
 }
 
 .read-more {
